<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Material" Id="{d9669ebd-d8ca-49bd-a09d-1e710b162e4f}">
    <Declaration><![CDATA[TYPE ST_Material :
STRUCT
	ID: ARRAY[0..15] OF BYTE;
	Name: STRING(50);
	Description: STRING(255);
	BedTemperature: LREAL;
	HotendTemperature: LREAL;
	IdealTempExtr: LREAL;
	MinTempExtr: LREAL;
	MaxTempExtr: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>